# datatables

./: .gitignore  README.md  pyproject.toml
datatables/: __init__.py
datatables/app/: main.py
datatables/app/controllers/: cleaning_data.py  data_analysis.py  exctract_data_from_tables.py  save_to_csv.py  scrap_tables_data.py
datatables/app/data/csv/: employee_data_clean.csv
datatables/app/models/: analyse_data_models.py
