[tool.poetry]
name = "datatables"
version = "0.1.0"
description = ""
authors = ["azfarmasood <azfarmasood22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.15.0"
beautifulsoup4 = "^4.13.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
numpy = "^2.2.4"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20250306"
pandas-stubs = "^2.2.3.250308"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
