[tool.poetry]
name = "datatables"
version = "1.0.0"
description = "A Python tool that scrapes and analyzes employee data from DataTables demo pages"
authors = ["Afnan and Azfar"]
readme = "README.md"
packages = [{include = "datatables"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.0"
pandas = "^2.0.0"
requests = "^2.31.0"
typing = "^3.7.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datatables = "datatables.app.main:main"